--- a/src/screens/Profile/styles.scss
+++ b/src/screens/Profile/styles.scss
@@ -1,13 +1,3 @@
-.wrapper {
-  position: relative;
-  display: flex;
-  justify-content: space-around;
-  align-content: center;
-  min-width: 100px;
-  border-bottom: 2px solid black;
-  margin-bottom: 20px;
-}
-
 .emp-profile {
   padding: 3%;
   margin-top: 3%;
